--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,10 +15,11 @@ spring:
         format_sql: true
     open-in-view: false
   firebase:
-    config-path: ticker-d92f7-firebase-adminsdk-fbsvc-7b468ffbee.json
+    config-path: ${FIREBASE_CONFIG_PATH:classpath:ticker-d92f7-firebase-adminsdk-fbsvc-7b468ffbee.json}
   redis:
     host: localhost
     port: 6379
+
 server:
   servlet:
     session:
