--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -12,6 +12,10 @@ spring:
       hibernate:
         format_sql: true
 
+  redis:
+    host: localhost
+    port: 6379
+
 server:
   servlet:
     session:
