--- a/.github/workflows/jdk-gradle.yml
+++ b/.github/workflows/jdk-gradle.yml
@@ -20,17 +20,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      redis:
-        image: redis:latest
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -62,3 +51,5 @@ jobs:
 
       - name: Test with Gradle
         run: ./gradlew clean test
+        env:
+          SPRING_PROFILES_ACTIVE: test
