--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ server:
   servlet:
     session:
       timeout: 30m
+    encoding:
+      force: true
+      charset: UTF-8
+      enabled: true
+
