--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,11 +15,12 @@ spring:
         format_sql: true
     open-in-view: false
 
-  redis:
-    host: localhost
-    port: 6379
-
 server:
   servlet:
     session:
       timeout: 30m
+    encoding:
+      force: true
+      charset: UTF-8
+      enabled: true
+
