--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
