--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -11,10 +11,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  redis:
-    host: localhost
-    port: 6379
-    enabled: false # Redis 비활성화 설정
+  data:
+    redis:
+      host: local
+      port: 6379
 
 server:
   servlet:
